--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ cookieconsent.run({"notice_banner_type":"simple","consent_type":"implied","palet
         </div>
       </div>
       
-      <a href="#" class="btn download-btn">Try App</a>
+      <a href="frutii.streamlit.app" class="btn download-btn">Try App</a>
     </div>
 
         </div>
