--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ cookieconsent.run({"notice_banner_type":"simple","consent_type":"implied","palet
     <section id="projects" class="section morphic-section">
       <h2 class="section-title animate__animated animate__fadeInDown">Projects</h2>
       <div class="projects-grid">
+        <!-- Projects start-->
         <div class="project-card morphic-card">
           <svg viewBox="0 0 300 250" xmlns="http://www.w3.org/2000/svg">
             <defs>
@@ -156,6 +157,28 @@ cookieconsent.run({"notice_banner_type":"simple","consent_type":"implied","palet
             <a href="https://github.com/Flixanalytics/netflixApp" class="btn">View Project</a>
           </div>
         </div>
+        <!-- Projects end-->
+        <!-- Projects fruit start-->
+              <div class="project-card morphic-card">
+        <svg viewBox="0 0 300 250" xmlns="http://www.w3.org/2000/svg">
+          <defs>
+            <linearGradient id="fruit-classifier-gradient" x1="0%" y1="0%" x2="100%" y2="100%">
+              <stop offset="0%" style="stop-color:#34a853;stop-opacity:0.8" />
+              <stop offset="100%" style="stop-color:#4285f4;stop-opacity:0.8" />
+            </linearGradient>
+          </defs>
+          <rect width="300" height="250" fill="url(#fruit-classifier-gradient)" rx="20"/>
+          <text x="50%" y="50%" text-anchor="middle" fill="white" dy=".3em" font-size="24">Fruit Classifier</text>
+        </svg>
+        <!-- Project Content -->
+        <div class="project-content">
+          <h3>Fruit Classification App</h3>
+          <p>An AI-powered deep learning model for classifying fruits into distinct categories based on uploaded images.</p>
+          <a href="https://fruit.streamlit.app" class="btn">Try App</a>
+        </div>
+      </div>
+              <!-- Projects fruit end-->
+
         <div class="project-card morphic-card">
           <svg viewBox="0 0 300 250" xmlns="http://www.w3.org/2000/svg">
             <defs>
@@ -173,11 +196,7 @@ cookieconsent.run({"notice_banner_type":"simple","consent_type":"implied","palet
             <p>Our latest Custom ChatApp</p>
             <a href="https://github.com/Flixanalytics/chatapp" class="btn">View Project</a>
           </div>
-          <div class="project-content">
-            <h3>Fruit Classification App</h3>
-            <p>A deep learning-powered app for classifying fruits using uploaded images.</p>
-            <a href="https://github.com/Flixanalytics/fruits" class="btn">View Project</a>
-          </div>
+<!--  -->
         </div>
       </div>
     </section>
