--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ cookieconsent.run({"notice_banner_type":"simple","consent_type":"implied","palet
         <div class="project-content">
           <h3>Fruit Classification App</h3>
           <p>An AI-powered deep learning model for classifying fruits into distinct categories based on uploaded images.</p>
-          <a href="https://fruit.streamlit.app" class="btn">Try App</a>
+          <a href="https://frutii.streamlit.app" class="btn">Try App</a>
         </div>
       </div>
               <!-- Projects fruit end-->
@@ -245,7 +245,7 @@ cookieconsent.run({"notice_banner_type":"simple","consent_type":"implied","palet
         </div>
       </div>
       
-      <a href="frutii.streamlit.app" class="btn download-btn">Try App</a>
+      <a href="https://github.com/Flixanalytics/fruits" class="btn download-btn">Download model</a>
     </div>
 
         </div>
